--- a/assignment/package.json
+++ b/assignment/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sopt-makers/ui": "^2.8.8",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.9",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.4.2",
