--- a/assignment/package.json
+++ b/assignment/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sopt-makers/colors": "^3.0.3",
+    "@sopt-makers/fonts": "^2.0.2",
     "@sopt-makers/ui": "^2.8.8",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
@@ -18,9 +20,11 @@
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.5",
     "styled-components": "^6.1.14",
     "styled-reset": "^4.5.2",
-    "swr": "^2.3.0"
+    "swr": "^2.3.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
