--- a/assignment/package.json
+++ b/assignment/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5",
     "styled-components": "^6.1.14",
