--- a/assignment/package.json
+++ b/assignment/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@sopt-makers/colors": "^3.0.3",
     "@sopt-makers/fonts": "^2.0.2",
+    "@sopt-makers/icons": "^1.1.0",
     "@sopt-makers/ui": "^2.8.8",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
     "eslint-config-prettier": "^10.0.1",
@@ -31,6 +33,7 @@
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
